force-app/main/default/objects/ffr__XXXGLA__c/ffr__XXXGLA__c.object-meta.xml
<CustomObject>
    <description>For internal use only.</description>
    <label>XXX General Ledger Account</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XXX General Ledger Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>