force-app/main/default/objects/ffr__XXXGLA__c/fields/ffr__BalanceSheet2__c.field-meta.xml
<CustomField>
    <fullName>ffr__BalanceSheet2__c</fullName>
    <label>Balance Sheet 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ffr__BalanceSheet1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Current Assets</fullName>
            </value>
            <value>
                <fullName>Fixed Assets</fullName>
            </value>
            <value>
                <fullName>Intangible Assets</fullName>
            </value>
            <value>
                <fullName>Current Liabilities</fullName>
            </value>
            <value>
                <fullName>Long Term Liabilities</fullName>
            </value>
            <value>
                <fullName>Shareholders Funds</fullName>
            </value>
            <value>
                <fullName>Income Statement</fullName>
            </value>
            <value>
                <fullName>Profit and Loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>