force-app/main/default/objects/ffr__XXXGLA__c/fields/ffr__BalanceSheet3__c.field-meta.xml
<CustomField>
    <fullName>ffr__BalanceSheet3__c</fullName>
    <label>Balance Sheet 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ffr__BalanceSheet2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bank and Cash</fullName>
            </value>
            <value>
                <fullName>Accounts Receivable</fullName>
            </value>
            <value>
                <fullName>Provisions</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Prepayments and Accrued Income</fullName>
            </value>
            <value>
                <fullName>Debtors</fullName>
            </value>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>Fixtures Fittings and Equipment</fullName>
            </value>
            <value>
                <fullName>Land and Buildings</fullName>
            </value>
            <value>
                <fullName>Intangible Assets</fullName>
            </value>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Accruals and Deferred Income</fullName>
            </value>
            <value>
                <fullName>Employment Payables</fullName>
            </value>
            <value>
                <fullName>Tax Liability</fullName>
            </value>
            <value>
                <fullName>Creditors</fullName>
            </value>
            <value>
                <fullName>Employment Creditors</fullName>
            </value>
            <value>
                <fullName>Payable After 1 Year</fullName>
            </value>
            <value>
                <fullName>Creditors Due After 1 Year</fullName>
            </value>
            <value>
                <fullName>Capital and Reserves</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>