force-app/main/default/objects/ffr__XXXGLA__c/fields/ffr__TrialBalance1__c.field-meta.xml
<CustomField>
    <fullName>ffr__TrialBalance1__c</fullName>
    <label>Trial Balance 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Profit and Loss</fullName>
            </value>
            <value>
                <fullName>Income Statement</fullName>
            </value>
            <value>
                <fullName>Balance Sheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>