force-app/main/default/objects/ffr__XXXGLA__c/fields/ffr__TrialBalance2__c.field-meta.xml
<CustomField>
    <fullName>ffr__TrialBalance2__c</fullName>
    <label>Trial Balance 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ffr__TrialBalance1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Gross Profit</fullName>
            </value>
            <value>
                <fullName>Operating Expenses</fullName>
            </value>
            <value>
                <fullName>Interest and Taxation</fullName>
            </value>
            <value>
                <fullName>EBITDA</fullName>
            </value>
            <value>
                <fullName>Depreciation and Amortization</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Taxation</fullName>
            </value>
            <value>
                <fullName>Current Assets</fullName>
            </value>
            <value>
                <fullName>Fixed Assets</fullName>
            </value>
            <value>
                <fullName>Intangible Assets</fullName>
            </value>
            <value>
                <fullName>Current Liabilities</fullName>
            </value>
            <value>
                <fullName>Long Term Liabilities</fullName>
            </value>
            <value>
                <fullName>Shareholders Funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>