force-app/main/default/objects/ffr__XXXGLA__c/fields/ffr__TrialBalance4__c.field-meta.xml
<CustomField>
    <fullName>ffr__TrialBalance4__c</fullName>
    <label>Trial Balance 4</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ffr__TrialBalance3__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sales - Direct</fullName>
            </value>
            <value>
                <fullName>Sales - Indirect</fullName>
            </value>
            <value>
                <fullName>Cost of Sales - Direct</fullName>
            </value>
            <value>
                <fullName>Cost of Sales - Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>