force-app/main/default/objects/ffr__XXXGLA__c/fields/ffr__Type__c.field-meta.xml
<CustomField>
    <fullName>ffr__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Balance Sheet</fullName>
            </value>
            <value>
                <fullName>Profit and Loss</fullName>
            </value>
            <value>
                <fullName>Retained Earnings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>